Control buttons work

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
 
 			</div>
 			<div class="controls">
-				<i class="fa fa-step-backward control"></i>
-				<i class="fa fa-play control"></i>
-				<i class="fa fa-step-forward control"></i>
+				<i class="fa fa-step-backward control" onclick="prevSong()"></i>
+				<i class="fa control" onclick="togglePlay()" id="playBtn"></i>
+				<i class="fa fa-step-forward control" onclick="nextSong()"></i>
 			</div>
 		</div>
 		<script src="index.js"></script>
