--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,28 @@
 	</head>
 	<body>
 		<div class="main">
-			<div class="cover">
-
+			<div class="background"></div>
+			<div class="cover"></div>
+			<div class="settings">
+				Haí
 			</div>
+			<div class="song-info">
+				Artist - Song
+			</div>
+
 			<div class="controls">
-				<i class="fa fa-step-backward control" onclick="prevSong()"></i>
-				<i class="fa control" onclick="togglePlay()" id="playBtn"></i>
-				<i class="fa fa-step-forward control" onclick="nextSong()"></i>
+				<i class="fa fa-step-backward control"
+				onclick="prevSong()"
+				id="prevBtn"></i>
+				<i class="fa control"
+				onclick="togglePlay()"
+				id="playBtn"></i>
+				<i class="fa fa-step-forward control"
+				onclick="nextSong()"
+				id="nextBtn"></i>
+				<i class="fa fa-cog"
+				onclick="toggleSettings()"
+				id="settingsBtn"></i>
 			</div>
 		</div>
 		<script src="index.js"></script>
