Added overlay and refactor

--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,9 @@
 		<div class="main">
 			<div class="background"></div>
 			<div class="cover"></div>
-			<div class="settings">
-				Haí
-			</div>
 			<div class="song-info">
-				Artist - Song
+				<div class="artist">SILVERSUN PICKUPS</div>
+				<div class="title">Growing Old Is Getting Old</div>
 			</div>
 
 			<div class="controls">
