Settings screen ready

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,12 @@
 				<div class="title">{ model.Title }</div>
 			</div>
 			<div id="mousearea"></div>
+			<div class="settings" id="settings">
+				<p>HOST</p>
+				<input type="text" rv-value="model.host">
+				<p>PORT</p>
+				<input type="text" rv-value="model.port">
+			</div>
 
 			<div class="controls">
 				<i class="fa fa-step-backward control"
