--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 				<input type="text" rv-value="model.port">
 			</div>
 
-			<div class="controls">
+			<div class="controls" id="controls">
 				<i class="fa fa-step-backward control"
 				onclick="prevSong()"
 				id="prevBtn"></i>
