Restructured project in preperation for adding a playlist window

--- a/src/player/index.html
+++ b/src/player/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<title>msc</title>
-		<link rel="stylesheet" href="style.css" />
-		<link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+		<link rel="stylesheet" href="style/style.css" />
+		<link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css" />
 	</head>
 	<body>
 		<div class="main" id="mscapp">
