Successfully parses the playlist string

--- a/src/playlist/index.html
+++ b/src/playlist/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css" />
 	</head>
 	<body>
-		<div class="" id="playlistapp">
+		<div id="playlistapp">
 
 		</div>
 		<script src="js/app.js"></script>
