Porting Player window to Typescript + alt

--- a/src/player/index.html
+++ b/src/player/index.html
@@ -9,6 +9,6 @@
 		<div class="main" id="mscapp">
 
 		</div>
-		<script src="js/app.js"></script>
+		<script src="app.js"></script>
 	</body>
 </html>
